# XPoint

./: !compile.bat  !dcc.cmd  !del.cmd  !pack.cmd  !packsrc.cmd  .gitignore  ARCHIVE.PAS  CAPI.ASM  CAPI.PAS  CAPIDEF.INC  CLIP.ASM  CLIP.PAS  COPYING.GER  CRC16.PAS  ChangeLog  DATABAS1.INC  DATABAS2.INC  DATABASE.ASM  DATABASE.INC  DATABASE.PAS  DATABASO.PAS  DATADEF.PAS  DATADEF1.PAS  DBASE.PAS  DBFORM  DOCFORM.PAS  DOSX.PAS  EDDEF.PAS  EDITOR.ASM  EDITOR.INC  EDITOR.PAS  EMS.PAS  EXXEC.ASM  EXXEC.PAS  FEIERTAG.PAS  FILEIO.PAS  HELP.PAS  IHS.PAS  INOUT.PAS  INSTALL  (+471 more)
Internet/: code-de.html  code-en.html  code.html  code.php  contact-de.html  contact-en.html  contact.html  credits.html  download-de.html  download-en.html  download.html  download.txt  download16-de.html  download16-en.html  download16.txt  download32-de.html  download32-en.html  download32.txt  einfo.html  elinks.html  enav.html  engl_index.htm  eoxp330.html  eoxp370.html  faq-de.txt  faq16-de.txt  faq32-de.txt  faq340-de.txt  faq370-de.txt  faqgpl-de.txt  features.txt  ginfo.html  glinks.html  gnav.html  goxp330.html  goxp370.html  head.html  hints-de.txt  index-de.php  index-en.php  (+26 more)
ObjCOM/: Makefile  credits.txt  developer.txt  example.pas  license.txt  objcom.pas  ocdeffpc.inc  ocdefine.inc  ocfdos.inc  ocfdosh.inc  ocrawip.inc  ocrawiph.inc  ocsdos.inc  ocsdosh.inc  ocslin.inc  ocslinh.inc  ocsos2.inc  ocsos2h.inc  ocswin.inc  ocswinh.inc  octelnet.inc  octelneth.inc  octhread.pas  octlinux.inc  octlinuxh.inc  octwin.inc  octwinh.inc  pmwsock.pas  ringbuff.pas  serial.pas  serial.pp  todo.txt
beispiel/: glossary.cfg  gsbox.scr  madness.scr  magic.scr  maus.scr  o-magic.scr  oz-netz.scr  pcsysop.scr  privhead.xps  qbrett.xps  qpmpriv.xps  qpriv.xps  quark.scr  quoteto.xps  uucp.scr  xpmailto.reg  z-netz.scr  zcjanusp.scr
charsets/: 8859_1.inc  8859_10.inc  8859_13.inc  8859_14.inc  8859_15.inc  8859_16.inc  8859_2.inc  8859_3.inc  8859_4.inc  8859_5.inc  8859_6.inc  8859_7.inc  8859_8.inc  8859_9.inc  aliases.inc  aliases.pl  aliases.txt  cp1250.inc  cp1251.inc  cp1252.inc  cp1255.inc  cp437.inc  cp850.inc  cp857.inc  cp858.inc  cp866.inc  iso646de.inc  more_aliases.txt  preferred_aliases.txt
debian/: Makefile  Makefile.PL  README  bts  changelog  changelog.in  control  copyright  menu  openxp-de.doc-base  openxp-doc.doc-base  openxp-doc.postinst  openxp-doc.prerm  openxp.1  openxp.menu  openxp.postinst  openxp.postrm  rules  rules.debhelper
delphi/: crt.pas  dos.pas
doc/: !todo.txt  COPYING  FIDO.TXT  Makefile  Uucp.txt  Xpoint.txt  authors.txt  bestell.doc  bsdlicense.txt  codereview.txt  db-unicode.txt  dbform  dbform.txt  devtodo.txt  fido.dq  files.txt  linux.txt  lizenz.doc  make.txt  neues.doc  neues.txt  openxp-d.ihq  openxp-e.ihq  openxp.odt  openxp.sxw  oxp16_en.txt  oxp_en.txt  planung.txt  readme.lnx  readme.txt  reg_eng.txt  register.doc  slizenz.txt  snapshot.txt  tools.txt  update.txt  uucp.dq  version.txt  versions.faq  versions.txt  (+10 more)
dos32/: doserrno.pas  dossock.pas
ihs32/: debug.pas  fileio.pas  ihs.pas  keys.pas  log.pas  stringtools.pas  typeform.pas  xp0.pas  xpdefine.inc  xpglobal.pas
linux/: dosx.inc  dosxh.inc  fileio.inc  fileioh1.inc  video.inc
netcall/: ncfido-binkp.inc  ncfido-emsi.inc  ncfido-wazoo.inc  ncfido-yoohoo.inc  ncfido.pas  ncgeneric.pas  ncimap.pas  ncimap.rst  ncmodem.pas  ncnntp.pas  ncnntp.rst  ncpop3.pas  ncsmtp.pas  ncsmtp.rst  ncsocket.pas  ncuucp-e.inc  ncuucp-fz.inc  ncuucp-g.inc  ncuucp-t.inc  ncuucp.pas  ncuucp_e.pas  ncuucp_fz.pas  ncuucp_g.pas  ncuucp_t.pas  netcall.pas  xpmodemscripts.pas  xpncclient.pas  xpncfido.pas  xpncimap.pas  xpncimap.rst  xpncmaustausch.pas  xpncnntp.pas  xpncnntp.rst  xpncpop3.pas  xpncpop3.rst  xpncuucp.pas  xpnczconnect.pas  xpnetcall.pas  zmodem.pas
os2/: os2sock.pas
playground/: OVERXMS.PAS  README.TXT  XP-Versionen.odg  XP-Versionen.sxd  adressen.txt  base64.pp  bezug.pas  bufferconverters.pas  codingstandard.www  editor.inc  editor.pas  features.www  header-xref.html  index-de.html  langinfo.c  maillist.txt  mime.pas  mime_analyze.pas  mime_codec.pas  mime_codec_base64.pas  mime_codec_qp.pas  mime_ctype.pas  mime_disposition.pas  mime_rfc2047.pas  (+65 more)
(+90 files in other folders)
