# $Id: configure.ac,v 1.1 2003/02/21 19:32:13 cl Exp $
#  
#  configure.in -- OpenXP autoconf build system
#  
#  This software is part of the OpenXP project (www.openxp.de).
#  Copyright (c) 2000 by the OpenXP Team.
#  Created on 2002-01-13 by Claus F"arber <claus@faerber.muc.de>
#  
#  This is free software; you can redistribute it and/or modify it
#  under the terms of the Lesser GNU General Public License (LGPL) as
#  published by the Free Software Foundation; either version 2,
#  or (at your option) any later version.
#  
#  The software is distributed in the hope that it will be useful, but
#  WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See LGPL
#  for more details.
#  
#  You should have received a copy of the LGPL along with this
#  software; see the file lgpl.txt. If not, write to the
#  Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.

AC_INIT(openxp.dpr)
AC_PREREQ(2.53)
AC_REVISION($Revision: 1.1 $)
AC_CONFIG_HEADER(config.h)

# ---------------------------------------------------------------------
# checks for programs
# ---------------------------------------------------------------------
AC_LANG_PASCAL
AC_PROG_PPC(ppc386 dcc)

# ---------------------------------------------------------------------
# checks for libraries
# ---------------------------------------------------------------------
# AC_CHECK_LIB(ssl,SSL_library_init)
# AC_CHECK_LIB(gnutls,gnutls_init,crypt)
# AC_CHECK_LIB(ncurses,initscr)

# checks for header files
# checks for typedefs
# checks for structures
# checks for compiler characteristics
# checks for library functions

# ---------------------------------------------------------------------
# check for compiler switches
# ---------------------------------------------------------------------

# ---------------------------------------------------------------------
# checks for system services/specialities
# ---------------------------------------------------------------------


# ---------------------------------------------------------------------
AC_OUTPUT(Makefile)
